@startuml Diagrama de clases

class Cliente{
    - nombre
    - codigo
    - email
    - telefono
    - ciudad
}

class Administracion{
    - nombre
    - codigo
    - puesto
}

class Cabana{
    - capacidad
    - tipo
    - nivel
    - codigo
}

class Proveedor{
    - nombre
    - codigo
    - CUIT 
    - telefono
    - email
    - insumo
}

class Reserva{
    - codigo
    - fecha_inicio
    - fecha_fin
    - num_cabaña
    - codigo_cliente
}

Cliente -- Reserva
Cabana -- Administracion
Administracion -- Reserva
Administracion -- Proveedor
